# gun-room

./: .gitignore  CMakeLists.txt  README.md
src/: baddie.c  baddie.h  boom.c  boom.h  bullet.c  bullet.h  coin.c  coin.h  dead_baddie.c  dead_baddie.h  main.c  math_utils.c  math_utils.h  player.c  player.h  world.h
